--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,8 @@ dependencies = [
     "hydra-core>=1.3.2",    # for configuration management
     "matplotlib>=3.7.0",
     "scantree",
+    "requests",
+    "gdown"
 ]
 
 [project.optional-dependencies]
